[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/tooltip_back.png" type="Texture" id=1]
[ext_resource path="res://Scripts/inventory_tt.gd" type="Script" id=2]

[node name="ItemBase" type="TextureRect"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats_tt" type="CanvasLayer" parent="."]

[node name="stats_tt_popup" type="Popup" parent="stats_tt"]
visible = true
margin_right = 128.0
margin_bottom = 204.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="TextureRect" parent="stats_tt/stats_tt_popup"]
margin_right = 300.0
margin_bottom = 400.0
rect_rotation = 0.103403
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_name" type="Label" parent="stats_tt/stats_tt_popup/stats"]
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats_container" type="VBoxContainer" parent="stats_tt/stats_tt_popup/stats"]
margin_top = 30.0
margin_right = 124.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power" type="Label" parent="stats_tt/stats_tt_popup/stats/stats_container"]
margin_right = 124.0
margin_bottom = 14.0
text = "Potency"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="stats_tt/stats_tt_popup/stats/stats_container/power"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dmg_type" type="Label" parent="stats_tt/stats_tt_popup/stats/stats_container"]
margin_top = 18.0
margin_right = 124.0
margin_bottom = 32.0
text = "Type"

[node name="value" type="Label" parent="stats_tt/stats_tt_popup/stats/stats_container/dmg_type"]
margin_left = 60.0
margin_right = 120.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_ItemBase_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemBase_mouse_exited"]
